Fixed: Modified margins and positions to avoid overflow of carousel box and courses image

--- a/src/layout/home/courses/courses.module.css
+++ b/src/layout/home/courses/courses.module.css
@@ -52,11 +52,12 @@
 .poster-image {
     position: absolute;
     bottom: 0;
+    left: -60px;
 }
 
 .poster-shapes {
     position: absolute;
-    left: 0;
+    left: -100px;
     bottom: 0;
     width: 100%;
     height: 100%;
