--- a/src/layout/home/navbar/navbar.module.css
+++ b/src/layout/home/navbar/navbar.module.css
@@ -14,7 +14,7 @@
 }
 
 .navbar-container {
-    padding-top: 71px;
+    /*padding-top: 71px;*/
 }
 
 .navbar {
@@ -31,7 +31,7 @@
     height: 90px;
     padding-right: 26px;
     padding-left: 43px;
-    box-shadow: 0px 6px 40.7px rgba(0, 0, 0, 0.57);
+    box-shadow: 0 6px 41px rgba(0, 0, 0, 0.57);
     border-radius: 108px;
 }
 
